# eqeqo-api-auth

./: .env-example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: lib.rs
db/: DB.md  demo_data.sql  procedures.sql  run_all.sql  structure.sql
src/: auth.rs  database.rs  lib.rs  main.rs
src/handlers/: mod.rs  permissions.rs  relations.rs  roles.rs  services.rs  users.rs
tests/: api_test.rs  api_tests.rs  integration.rs
