[package]
name = "eqeqo-api-auth"
version = "0.0.1"
edition = "2024"
authors = ["fahedsl <fahedsl@yandex.com>"]
description = "Centralized authentication and authorization API for multiple independent services. Manages users, roles, permissions, and service associations."
license = "MIT"
repository = "https://gitlab.com/numanope/eqeqo/bazoj/auth-api"
homepage = "https://gitlab.com/numanope/eqeqo/bazoj/auth-api"
readme = "README.md"
keywords = ["authentication", "authorization", "api", "users", "roles"]

[lib]
name = "eqeqo_api_auth"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
httpageboy = { version = "1.0.16", features = ["async_tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
rand = "0.8"
sha2 = "0.10"
bcrypt = "0.15"

[workspace]
members = ["crates/eqeqo-api-auth-client"]
